re-run rce exps

--- a/data/pg2/rce/rce_s1/config.yml
+++ b/data/pg2/rce/rce_s1/config.yml
@@ -1,22 +1,22 @@
 arguments:
     config: ./config.yml
-    dir: ./data/
+    dir: data/pg2
     ensemble: 0
     episode: 10
     epoch: 80
-    level: 1
-    load: data/pg1/rce/rce_s1/
-    name: test
+    level: 2
+    load: null
+    name: rce
     optimizer: rce
-    render: true
+    render: false
     robot: point
-    save: false
+    save: true
     seed: 1
-    test: true
+    test: false
 cost_config:
     batch: 2000
-    load: true
-    load_folder: data/pg1/rce/rce_s1/
+    load: false
+    load_folder: null
     max_ratio: 3
     model_param:
         boosting_type: gbdt
@@ -26,8 +26,8 @@ cost_config:
         n_jobs: 1
         num_leaves: 12
     safe_buffer_size: 50000
-    save: false
-    save_folder: null
+    save: true
+    save_folder: data/pg2/rce/rce_s1
     unsafe_buffer_size: 10000
 dynamic_config:
     activation: relu
@@ -39,15 +39,15 @@ dynamic_config:
     - 1024
     - 1024
     learning_rate: 0.001
-    load: true
-    load_folder: data/pg1/rce/rce_s1/
+    load: false
+    load_folder: null
     n_ensembles: 4
     n_epochs: 70
-    save: false
-    save_folder: null
+    save: true
+    save_folder: data/pg2/rce/rce_s1
     test_freq: 5
     test_ratio: 0.15
-exp_name: test
+exp_name: rce
 mpc_config:
     CEM:
         alpha: 0.1
